--- a/crates/ara/Cargo.toml
+++ b/crates/ara/Cargo.toml
@@ -12,11 +12,12 @@ wgpu = { workspace = true, features = ["webgl"] }
 log.workspace = true
 thiserror.workspace = true
 parking_lot.workspace = true
-derive_more.workspace = true
+derive_more = { workspace = true, features = ["deref", "deref_mut"] }
 anyhow.workspace = true
 smallvec.workspace = true
 futures.workspace = true
 num-traits.workspace = true
+slotmap.workspace = true
 
 ara-math = { path = "../ara-math" }
 
